# ibis-sqlflite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ibis_sqlflite/: __init__.py
tests/: basic_test.py  conftest.py
